--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Awesome
+      Welcome
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,17 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Awesome</ion-title>
+      <ion-title size="large">Welcome</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Environment 🚀🚀🚀</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <p>Hello {{ environment }}!</p>
+      <p>This environment is using {{ api }} to fetch data!</p>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
