--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -15,7 +15,7 @@
 
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Environment 🐄🔔</ion-card-title>
+      <ion-card-title>Environment 🚀🚀🚀</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <p>Hello {{ environment }}!</p>
